--- a/src/components/SearchMap/SearchMap.module.css
+++ b/src/components/SearchMap/SearchMap.module.css
@@ -22,6 +22,13 @@
   height: 100vh;
 }
 
+.togggleMapButton {
+  position: absolute;
+  /* height: 50px; */
+  min-width: 100px;
+  left: -120px;
+}
+
 /**
  * When reusable map is attached right to the body it's hidden.
  * Specificity rule is added to overwrite positioning coming from props.className
