Refactor + Style: - Use 'yarn' instead of 'npm'. - Deconstruct new props added to MainPanel, and define their PropTypes and default props. - Declare new text content for Hide/Show Map button in 'en.json' translation file. - Fix styling for Hide/Show Map button no longer scroll along the page but fixed.

--- a/src/containers/SearchPage/SearchPage.module.css
+++ b/src/containers/SearchPage/SearchPage.module.css
@@ -175,10 +175,14 @@
 
 .mapToggler {
   min-height: 40px;
-  position: absolute;
+  position: fixed;
   width: fit-content;
   padding: 0 20px;
-  right: 10px;
+  right: 36px;
   z-index: var(--zIndexMapToggler);
   top: calc(var(--topbarHeightDesktop) + 18px);
+
+  @media (--viewportLarge) {
+    top: calc(var(--topbarHeightDesktop) + 23px);
+  }
 }
