feature: A new listing for equipment - added a "Add new Equipment" button to the top bar. - Added a General tab for Equipment Listing creation. - An equipment listing can be created but not yet displayed correctly in its listing page.

--- a/src/components/TopbarMobileMenu/TopbarMobileMenu.module.css
+++ b/src/components/TopbarMobileMenu/TopbarMobileMenu.module.css
@@ -28,6 +28,10 @@
   box-shadow: var(--boxShadowTop);
 }
 
+.footer > *:first-child {
+  margin-bottom: 10px;
+}
+
 .avatar {
   /* Layout */
   flex-shrink: 0;
