Feature: Implement view listing page for equipment - Sauna and Equipment listing page use the same component ListingPage to show listing details with each type having shared and custom sections. - Remove EditEquipmentListingAvailabilityForm folder because it was identical to EditListingAvailableForm and not required to implement Availability tab for Equipment listings.

--- a/src/components/SectionHero/SectionHero.module.css
+++ b/src/components/SectionHero/SectionHero.module.css
@@ -96,3 +96,21 @@
     width: 260px;
   }
 }
+
+.searchButtons {
+  display: flex;
+  flex-flow: column;
+
+  @media (--viewportMedium) {
+    flex-flow: row;
+  }
+}
+
+.searchButtons > *:first-child {
+  margin-bottom: 20px;
+  
+  @media (--viewportMedium) {
+    margin-bottom: 0;
+    margin-right: 30px;
+  }
+}
