Feature: added photos tab with two photo sections to Equipment listings. - User can now add 2 different types of photos onto an Equipment listing: a main photo that will be show at the top of the listing, and other related photos that will be shown in the listing's details area. - Equipment listings take a new publicData attribute 'otherImages', which is an object of related images' UUIDs with values of true for faster fitlering.

--- a/src/forms/EditListingPhotosForm/EditListingPhotosForm.module.css
+++ b/src/forms/EditListingPhotosForm/EditListingPhotosForm.module.css
@@ -9,9 +9,15 @@
   flex-shrink: 0;
 }
 
+.photosTitle {
+  margin-top: 20px;
+  margin-bottom: 0;
+  font-size: 16px;
+}
+
 .imagesField {
   flex-shrink: 0;
-  margin: 0;
+  margin: 0 0 20px 0;
 }
 
 .thumbnail {
