Styles: Increase number of listing cards per row when map is hidden - when map is hidden on Medium and larger screens, the search results will show more listing cards per row: 2 on Medium, 3 on Large, and 4 on XLarge.

--- a/src/containers/SearchPage/SearchPage.module.css
+++ b/src/containers/SearchPage/SearchPage.module.css
@@ -174,13 +174,18 @@
 }
 
 .mapToggler {
-  min-height: 40px;
-  position: fixed;
-  width: fit-content;
-  padding: 0 20px;
-  right: 36px;
-  z-index: var(--zIndexMapToggler);
-  top: calc(var(--topbarHeightDesktop) + 18px);
+  display: none;
+
+  @media (--viewportMedium) {
+    display: block;
+    min-height: 40px;
+    position: fixed;
+    width: fit-content;
+    padding: 0 20px;
+    right: 36px;
+    z-index: var(--zIndexMapToggler);
+    top: calc(var(--topbarHeightDesktop) + 18px);
+  }
 
   @media (--viewportLarge) {
     top: calc(var(--topbarHeightDesktop) + 23px);
