--- a/src/components/SearchResultsPanel/SearchResultsPanel.module.css
+++ b/src/components/SearchResultsPanel/SearchResultsPanel.module.css
@@ -17,6 +17,12 @@
   }
 }
 
+.listingCardsContainerMapHiddenDesktop {
+  @media (--viewportMedium) {
+    justify-content: space-between;
+  }
+}
+
 .listingCard {
   margin-bottom: 36px;
   flex-basis: 100%;
@@ -58,6 +64,21 @@
 
     flex-basis: calc(33.33% - 16px);
     margin-right: 24px;
+  }
+}
+
+.listingCardMapHiddenDesktop {
+  @media (--viewportMedium) {
+    flex-basis: calc(50% - 20px);
+    margin-right: 0;
+  }
+  @media (--viewportLarge) {
+    flex-basis: 32%;
+    margin-right: 0;
+  }
+  @media (--viewportXLarge) {
+    flex-basis: 24%;
+    margin-right: 0;
   }
 }
 
