Features: Equipment Search Filters - Changed manufactureYear and maxUsesPerDay data type from String to Number for indexing search params as type long. - Merge 2 previous filter arrays (filters and equipmentFilters) into one to remove duplicate filter items (price, dates, keywords, listingType). - Create a RangeFilter component for filter with range sliders (type long) like price, manufactureYear, and maxUsesPerDay. - Listings can now be filtered by listingType of either 'equipment' or 'sauna' (although many sauna listings created long ago would not have listingType 'sauna'). - Equipment listings can now be filtered by equipment types, manufactureYear, and max use times per day.

--- a/src/forms/RangeFilterForm/RangeFilterForm.module.css
+++ b/src/forms/RangeFilterForm/RangeFilterForm.module.css
@@ -81,7 +81,7 @@
   }
 }
 
-.minPrice {
+.minRange {
   @apply --marketplaceSearchFilterSublabelFontStyles;
   width: 48px;
   text-align: center;
@@ -99,7 +99,7 @@
     padding: 1px 0 4px 0;
   }
 }
-.maxPrice {
+.maxRange {
   @apply --marketplaceSearchFilterSublabelFontStyles;
   width: 48px;
   text-align: center;
@@ -118,12 +118,12 @@
   }
 }
 
-.priceSeparator {
+.rangeSeparator {
   margin: 4px 8px 0 8px;
 }
 
 @media (--viewportMedium) {
-  .priceSeparator {
+  .rangeSeparator {
     margin: 2px 8px 0 8px;
   }
 }
