Refator + Fix + Styles: Bug fixes and code changes required after the first review - Fixed a bug where equipment type(s) is selected and all are unselected, and user could still continue to next tab. - Fixed a bug where if user upload some other images and then remove some before saving changes, the publicData.otherImages is updated with all other images first before being updated with the correct changes. - Styles Map Toggler button that was displayed over the current user dropdown menu. - Styles the other images photos in ListingPage to show all images as a grid, and upon clicking an image, that image will be shown on a modal. - Refactor the edit main photos section to receive multiple images instead of one. - Added listing types alias in types.js and listing types helper methods for uniformity and reusability.

--- a/src/components/SearchResultsPanel/SearchResultsPanel.module.css
+++ b/src/components/SearchResultsPanel/SearchResultsPanel.module.css
@@ -17,7 +17,7 @@
   }
 }
 
-.listingCardsContainerMapHiddenDesktop {
+.allCardsOpen {
   @media (--viewportMedium) {
     justify-content: space-between;
   }
@@ -67,7 +67,7 @@
   }
 }
 
-.listingCardMapHiddenDesktop {
+.cardOpen, .listingCardSpaceFiller {
   @media (--viewportMedium) {
     flex-basis: calc(50% - 20px);
     margin-right: 0;
@@ -80,6 +80,10 @@
     flex-basis: 24%;
     margin-right: 0;
   }
+}
+
+.listingCardSpaceFiller {
+  height: 0;
 }
 
 /**
